--- a/cv-plaincv-howtotex.tex
+++ b/cv-plaincv-howtotex.tex
@@ -82,10 +82,10 @@
 %%% BEGIN DOCUMENT
 %%% ------------------------------------------------------------
 \begin{document}
-%\begin{wrapfigure}{l}{0.3\textwidth}
-	%\vspace*{-8em}
-		%\includegraphics[width=0.25\textwidth]{photo}
-%\end{wrapfigure}
+\begin{wrapfigure}{l}{0.3\textwidth}
+  \vspace*{-8em}
+    \includegraphics[width=0.25\textwidth]{photo}
+\end{wrapfigure}
 
 \MyName{Attila Nagy}
 \MySlogan{Curriculum Vitae}
@@ -149,6 +149,6 @@ Ongoing
 %% References
 %%% ------------------------------------------------------------
 \NewPart{References}{}
-\SkillsEntry{GitHub Page:}{\url{https://github.com/nagyattila}}
+\SkillsEntry{GitHub:}{\url{https://github.com/nagyattila}}
 
 \end{document}
