--- a/cv-plaincv-howtotex.tex
+++ b/cv-plaincv-howtotex.tex
@@ -11,6 +11,7 @@
 
 %\usepackage[english]{babel}								% English language/hyphenation
 %\usepackage[protrusion=true,expansion=true]{microtype}		% Better typography
+\usepackage[utf8]{inputenc}
 \usepackage{amsmath,amsfonts,amsthm}					% Math packages
 \usepackage[pdftex]{graphicx}								% Enable pdflatex
 \usepackage[svgnames]{xcolor}							% Colors by their 'svgnames'
