Fixing Zoltan's review findings

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -36,7 +36,7 @@
 %%% Macros
 %%% ------------------------------------------------------------
 \newlength{\spacebox}
-\settowidth{\spacebox}{8888888888}				% Box to align text
+\settowidth{\spacebox}{888888888888}				% Box to align text
 \newcommand{\sepspace}{\vspace*{1em}}			% Vertical space macro
 
 \newcommand{\MyName}[1]{
@@ -97,7 +97,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Personal details}{}
 
-\PersonalEntry{Birth}{August 27, 1985}
+\PersonalEntry{Date of Birth}{August 27, 1985}
 \PersonalEntry{Address}{2A Mejerigatan}
 \PersonalEntry{}{41276, Gothenburg, Sweden}
 \PersonalEntry{Phone}{0046 768947275}
@@ -107,16 +107,16 @@
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
 
-\EducationEntry{MSc. Computer Science}{2012-Present}{University of Gothenburg and Chalmers University of Technology, Sweden}{Currently, I am in the second year of my master program concentrating mainly on the field of distributed system and computer networks. My estimated graduation is in February, 2014.}
+\EducationEntry{MSc. Computer Science}{2012-Present}{University of Gothenburg and Chalmers University of Technology, Sweden}{Currently, I am in the second year of my master's program concentrating mainly on the field of distributed systems and computer networks. My estimated graduation is in February, 2014.}
 \sepspace
-\EducationEntry{BSc. Electrical Engineering}{2008}{University of Applied Sciences Ravensburg-Weingarten, Germany}{I had the opportunity to study one semester from my BSc. in the wonderful scenery of Baden-Württemberg, Germany, as an ERASMUS student. First time in my life, I had the chance to try out myself in a culturally diverse, new environment. Soon I realized that I feel comfortable among international students, and, therefore, planned to carry on my studies at an internationally well-known university.}
+\EducationEntry{BSc. Electrical Engineering}{2008}{University of Applied Sciences Ravensburg-Weingarten, Germany}{I had the opportunity to study one semester from my BSc. in the wonderful scenery of Baden-Württemberg, Germany, as an ERASMUS student. For the first time in my life, I had the chance to challenge myself in a culturally diverse, new environment. Soon I realized that I feel comfortable among international students, and, therefore, planned to carry on with my studies at an internationally well-known university.}
 \EducationEntry{}{2004-2009}{Obuda University, Hungary}{Budapest Polytechnic, recently renamed to Obuda University, is one of the most prominent technical universities in Hungary. Beside the generic electrical engineering courses, my core subjects were: electronics, automation, embedded systems and computer networks. I graduated in 2009 on the Automatized Production Systems module of the Instrumentation and Automation Institute in the Electrical Engineer Faculty.}
 
 %%% Skills
 %%% ------------------------------------------------------------
 \NewPart{Skills}{}
 
-\SkillsEntry{Languages}{Hungarian (mother tongue)}
+\SkillsEntry{Languages:}{Hungarian (mother tongue)}
 \SkillsEntry{}{English (fluent)}
 \SkillsEntry{}{Swedish (basic)}
 \SkillsEntry{}{German (basic)}
@@ -138,19 +138,19 @@
 %%% ------------------------------------------------------------
 \NewPart{Work experience}{}
 
-\EducationEntry{Software Engineer}{2009-2012}{Nokia Siemens Networks, Budapest, Full-time}{During my three years at NSN, I was part of two teams; both followed agile principles and aimed to incorporate scrum methodologies into the daily work. On top of that, in my last year I became a scrum master of a team of 6 people. As for the work, in my first year I mainly was occupied by unit testing using a Nokia specific language, call TNSDL. Later I moved to a newly formed team requiring more complex and deeper knowledge in the given field. My tasks in this team covered several stages of the development process including implementation, unit and functional testing, and maintenance using wide-spread programming languages, tools and protocols, such as: C++, Python, Perl, BASH, GDB, oProfile, Valgrind, CxxTest, testAnt, Jenkins and LDAP.}
+\EducationEntry{Software Engineer}{2009-2012}{Nokia Siemens Networks, Budapest, Full-time}{During my three years at NSN, I was part of two teams; both followed agile principles and aimed to incorporate scrum methodologies into the daily work. On top of that, in my last year I became the scrum master of a team of 6 people. As for the work, in my first year I mainly was occupied by unit testing using a Nokia specific language, call TNSDL. Later I moved to a newly formed team requiring more complex and deeper knowledge in the given field. My tasks in this team covered several stages of the development process including implementation, unit and functional testing, and maintenance using a wide range of programming languages, tools and protocols, such as: C++, Python, Perl, BASH, GDB, oProfile, Valgrind, CxxTest, testAnt, Jenkins and LDAP.}
 \sepspace
 %%% Student Projects
 %%% ------------------------------------------------------------
 \NewPart{Student Projects}{}
 
-\EducationEntry{Master Years}{2013-Present}{Thesis}{With an early start and working during the summer, I managed to finish the lion-share of my master thesis by now. The thesis involves an already existing low-power, low-delay, opportunistic routing protocol for wireless sensor networks implemented on the TinyOS platform using a component-based, event-driven programming language devised for embedded systems, called nesC. My task was to extend this protocol for bulk-transfer scenarios and to test it on real testbeds. Future publication of this work is highly probable.}
-\EducationEntry{}{2013-Present}{Student Research}{Beside the course lectures and laboratories, I am part of a research project cooperating with three lecturers from the Chalmers University. The project involves smart meter disaggregation and automatic classification by several classifier algorithms, mostly support vector machine, using electricity consumption data from smart grid networks.}
-\EducationEntry{}{2013-Present}{Carolo Cup Project}{Carolo Cup is an international student competition for self-driven miniature vehicles organized annually in Germany. During the preparation for the next competition held in February, 2014, I further experience the merits of team work in the perspective of the team leader for the software team containing students from both Gothenburg University and Chalmers.}
+\EducationEntry{Master's Student Years}{2013-Present}{Thesis}{With an early start and working during the summer, I managed to finish the lion's share of my master thesis by now. The thesis involves an already existing low-power, low-delay, opportunistic routing protocol for wireless sensor networks implemented on the TinyOS platform using a component-based, event-driven programming language devised for embedded systems, called nesC. My task was to extend this protocol for bulk-transfer scenarios and to test it on real testbeds. Future publication on this work is highly probable.}
+\EducationEntry{}{2013-Present}{Student Research}{Beside the course lectures and laboratory exercises, I am part of a research project cooperating with three lecturers from Chalmers University. The project involves smart meter disaggregation and automatic classification by several classifier algorithms, mostly support vector machine, using electricity consumption data from smart grid networks.}
+\EducationEntry{}{2013-Present}{Carolo Cup Project}{Carolo Cup is an international student competition for self-driven miniature vehicles organized annually in Germany. During the preparation for the next competition held in February, 2014, I further experience the merits of team work in the perspective of the team leader for the software team containing students from both Gothenburg and Chalmers Universities.}
 
 \sepspace
-\EducationEntry{Bachelor Years}{2009}{Thesis}{Robot simulation in a 3D, OpenGL environment using C language with GLUT API.}
-\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learnt on my lectures, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of components.}
+\EducationEntry{Bachelor's Student Years}{2009}{Thesis}{Robot simulation in a 3D, OpenGL environment using C language with GLUT API.}
+\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learned about during lectures previously, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of components.}
 
 %% Publications
 %%% ------------------------------------------------------------
