--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -37,7 +37,7 @@
 %%% ------------------------------------------------------------
 \newlength{\spacebox}
 \settowidth{\spacebox}{888888888888}				% Box to align text
-\newcommand{\sepspace}{\vspace*{1em}}			% Vertical space macro
+\newcommand{\sepspace}{\vspace*{0.75em}}			% Vertical space macro
 
 \newcommand{\MyName}[1]{
 		\Huge \usefont{OT1}{phv}{b}{n} \hfill #1 		% Name
@@ -107,7 +107,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
 
-\EducationEntry{MSc. Computer Science}{2012-Present}{University of Gothenburg and Chalmers University of Technology, Sweden}{Currently, I am in the second year of my master's program concentrating mainly on the field of distributed systems and computer networks. My estimated graduation is in February, 2014.}
+\EducationEntry{MSc. Computer Science}{2012-Present}{University of Gothenburg and Chalmers University of Technology, Sweden}{The only leftover from my Master's program is the final presentation of my thesis which is schedule for the 28th of April, 2014. Most of the courses that I took during this program were in the fields of distributed systems and computer networks, but just to broaden my knowledge I also took courses that do not fit into these two fields, such as Artificial Intelligence and Functional Programming. The exact list of course can be found in my Transcript of Records.}
 \sepspace
 \EducationEntry{BSc. Electrical Engineering}{2008}{University of Applied Sciences Ravensburg-Weingarten, Germany}{I had the opportunity to study one semester from my BSc. in the wonderful scenery of Baden-Württemberg, Germany, as an ERASMUS student. For the first time in my life, I had the chance to challenge myself in a culturally diverse, new environment. Soon I realized that I feel comfortable among international students, and, therefore, planned to carry on with my studies at an internationally well-known university.}
 \EducationEntry{}{2004-2009}{Obuda University, Hungary}{Budapest Polytechnic, recently renamed to Obuda University, is one of the most prominent technical universities in Hungary. Beside the generic electrical engineering courses, my core subjects were: electronics, automation, embedded systems and computer networks. I graduated in 2009 on the Automatized Production Systems module of the Instrumentation and Automation Institute in the Electrical Engineer Faculty.}
@@ -122,7 +122,7 @@
 \SkillsEntry{}{German (basic)}
 \sepspace
 
-\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, VHDL, TNSDL, Haskell}
+\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, TNSDL, Haskell}
 \sepspace
 
 \SkillsEntry{Testing:}{CxxTest, testAnt, Jenkins}
@@ -144,13 +144,13 @@
 %%% ------------------------------------------------------------
 \NewPart{Student Projects}{}
 
-\EducationEntry{Master's Student Years}{2013-Present}{Thesis}{With an early start and working during the summer, I managed to finish the lion's share of my master thesis by now. The thesis involves an already existing low-power, low-delay, opportunistic routing protocol for wireless sensor networks implemented on the TinyOS platform using a component-based, event-driven programming language devised for embedded systems, called nesC. My task was to extend this protocol for bulk-transfer scenarios and to test it on real testbeds. Future publication on this work is highly probable.}
-\EducationEntry{}{2013-Present}{Student Research}{Beside the course lectures and laboratory exercises, I am part of a research project cooperating with three lecturers from Chalmers University. The project involves smart meter disaggregation and automatic classification by several classifier algorithms, mostly support vector machine, using electricity consumption data from smart grid networks.}
-\EducationEntry{}{2013-Present}{Carolo Cup Project}{Carolo Cup is an international student competition for self-driven miniature vehicles organized annually in Germany. During the preparation for the next competition held in February, 2014, I further experience the merits of team work in the perspective of the team leader for the software team containing students from both Gothenburg and Chalmers Universities.}
+\EducationEntry{Master's Student Years}{2013-2014}{Thesis}{The thesis involved an already existing low-power, low-delay, opportunistic routing protocol for wireless sensor networks implemented on the TinyOS platform using a component-based, event-driven programming language devised for embedded systems, called nesC. My task was to extend this protocol for bulk-transfer scenarios and to test it on real testbeds. Future publication on this work is highly probable.}
+\EducationEntry{}{2013-2014}{Student Research}{Beside the course lectures and laboratory exercises, I was part of a research project cooperating with three lecturers from Chalmers University. The project involved smart meter disaggregation and automatic classification by several classifier algorithms, mostly support vector machine, using electricity consumption data from smart grid networks.}
+\EducationEntry{}{2013-2014}{Carolo Cup Project}{Carolo Cup is an international student competition for self-driven miniature vehicles organized annually in Germany. During the preparation for the next competition held in February, 2014, I further experienced the merits of team work in the perspective of the team leader for the software team containing students from both Gothenburg and Chalmers Universities.}
 
 \sepspace
 \EducationEntry{Bachelor's Student Years}{2009}{Thesis}{Robot simulation in a 3D, OpenGL environment using C language with GLUT API.}
-\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learned about during lectures previously, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of components.}
+\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learned about during my lectures, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of components.}
 
 %% Publications
 %%% ------------------------------------------------------------
