updated based on CV Workshop

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -107,32 +107,42 @@
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
 
-\EducationEntry{MSc. Computer Science}{2012-Present}{University of Gothenburg and Chalmers University of Technology, Sweden}{The only leftover from my Master's program is the final presentation of my thesis which is schedule for the 28th of April, 2014. Most of the courses that I took during this program were in the fields of distributed systems and computer networks, but just to broaden my knowledge I also took courses that do not fit into these two fields, such as Artificial Intelligence and Functional Programming. The exact list of course can be found in my Transcript of Records.}
+\EducationEntry{MSc. Computer Science}{2012-2014}{University of Gothenburg, Sweden}{Transcript of records is available on demand.}
 \sepspace
-\EducationEntry{BSc. Electrical Engineering}{2008}{University of Applied Sciences Ravensburg-Weingarten, Germany}{I had the opportunity to study one semester from my BSc. in the wonderful scenery of Baden-Württemberg, Germany, as an ERASMUS student. For the first time in my life, I had the chance to challenge myself in a culturally diverse, new environment. Soon I realized that I feel comfortable among international students, and, therefore, planned to carry on with my studies at an internationally well-known university.}
-\EducationEntry{}{2004-2009}{Obuda University, Hungary}{Budapest Polytechnic, recently renamed to Obuda University, is one of the most prominent technical universities in Hungary. Beside the generic electrical engineering courses, my core subjects were: electronics, automation, embedded systems and computer networks. I graduated in 2009 on the Automatized Production Systems module of the Instrumentation and Automation Institute in the Electrical Engineer Faculty.}
+\EducationEntry{ERASMUS}{2008}{University of Applied Sciences Ravensburg-Weingarten, Germany}{}
+\EducationEntry{BSc. Electrical Engineering}{2004-2009}{Obuda University, Hungary}{}
+
+\NewPart{Work}{}
+\WorkEntry{Software Engineer}{2009-2012}{Nokia Siemens Networks}
+
+\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH}
+
+\SkillsEntry{Testing:}{CxxTest, testAnt, Jenkins}
+
+\SkillsEntry{Debugging:}{GDB, Valgrind, oProfile}
+
+\SkillsEntry{Principles:}{Scrum, Agile, TDD, KISS}
+
+\sepspace
+Reference is available on demand.
 
 %%% Skills
 %%% ------------------------------------------------------------
-\NewPart{Skills}{}
+\NewPart{Languages}{}
 
-\SkillsEntry{Languages:}{Hungarian (mother tongue)}
+\SkillsEntry{}{Hungarian (mother tongue)}
 \SkillsEntry{}{English (fluent)}
 \SkillsEntry{}{Swedish (basic)}
 \SkillsEntry{}{German (basic)}
-\sepspace
 
-\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, TNSDL, Haskell}
-\sepspace
+\NewPart{Interest}{}
+\SkillsEntry{Technical:}{functional programming}
+\SkillsEntry{}{Haskell}
+\SkillsEntry{}{free/open-source software}
 
-\SkillsEntry{Testing:}{CxxTest, testAnt, Jenkins}
 \sepspace
-
-\SkillsEntry{Debugging:}{GDB, Valgrind, oProfile}
-\sepspace
-
-\SkillsEntry{Principles:}{Scrum, Agile, TDD, KISS, Coding Dojo}
-\sepspace
+\SkillsEntry{Sports:}{rock climbing}
+\SkillsEntry{}{slacklining}
 
 %%% Work experience
 %%% ------------------------------------------------------------
@@ -150,7 +160,7 @@
 
 \sepspace
 \EducationEntry{Bachelor's Student Years}{2009}{Thesis}{Robot simulation in a 3D, OpenGL environment using C language with GLUT API.}
-\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learned about during my lectures, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of components.}
+\EducationEntry{}{2008}{Student Project}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature car. In this project, finally I had the opportunity to try out a subset of the techniques and technologies that I learned about during my lectures, namely: the design and simulation of a circuit diagram and layout using EAGEL, etching of a printed circuit board, soldering and assembly of the components.}
 
 %% Publications
 %%% ------------------------------------------------------------
