correct copy-paste error

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -160,7 +160,7 @@ Reference is available on demand.
 %%% ------------------------------------------------------------
 \NewPart{Work Projects}{}
 
-\EducationEntryNoTime{Nokia Siemens Networks Years}{In this project I mainly was occupied by unit testing using a Nokia specific language, call TNSDL. Later I moved to DXA, a project started from scratch requiring more complex and deeper knowledge.}
+\EducationEntryNoTime{Nokia Siemens Networks Years}{During my three years at NSN, I was part of two teams; both followed agile principles and aimed to incorporate scrum methodologies into the daily work. On top of that, in my last year I became the scrum master of a team of 6 people.}
 
 \EducationEntry{}{08/2009 -- 05/2010}{HLR}{In this project I mainly was occupied by unit testing using a Nokia specific language, call TNSDL. Later I moved to DXA, a project started from scratch requiring more complex and deeper knowledge.}
 
