--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -164,7 +164,7 @@ Reference is available on demand.
 
 \EducationEntry{}{08/2009 -- 05/2010}{HLR}{In this project I mainly was occupied by unit testing using a Nokia specific language, call TNSDL. Later I moved to DXA, a project started from scratch requiring more complex and deeper knowledge.}
 
-\EducationEntry{}{05/2010 -- 08/2012}{DXA}{My tasks in this project covered several stages of the development process including implementation, unit and functional testing, and maintenance using a wide range of programming languages, tools and protocols, such as: C++, Python, Perl, BASH, GDB, oProfile, Valgrind, CxxTest, testAnt, Jenkins and LDAP. On top of that, in my last year I became the scrum master of a team of 6 people.}
+\EducationEntry{}{05/2010 -- 08/2012}{DXA}{My tasks in this project covered several stages of the development process including implementation, unit and functional testing, and maintenance using a wide range of programming languages, tools and protocols, such as: C++, Python, Perl, BASH, GDB, oProfile, Valgrind, CxxTest, testAnt, Jenkins and LDAP.}
 
 %%% Student Projects
 %%% ------------------------------------------------------------
