--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -86,16 +86,16 @@
 %%% ------------------------------------------------------------
 %%% BEGIN DOCUMENT
 %%% ------------------------------------------------------------
-\begin{document}
-\begin{wrapfigure}{l}{0.3\textwidth}
-  \vspace*{-8em}
-    \includegraphics[width=0.25\textwidth]{photo}
-\end{wrapfigure}
+%\begin{document}
+%\begin{wrapfigure}{l}{0.3\textwidth}
+  %\vspace*{-8em}
+    %\includegraphics[width=0.25\textwidth]{photo}
+%\end{wrapfigure}
 
 \MyName{Attila Nagy}
 \MySlogan{Curriculum Vitae}
 
-\vspace*{0.8em}
+%\vspace*{0.8em}
 
 %%% Personal details
 %%% ------------------------------------------------------------
