--- a/CV_Attila_Nagy_simple.tex
+++ b/CV_Attila_Nagy_simple.tex
@@ -96,27 +96,37 @@
 \PersonalEntry{}{41717, Gothenburg, Sweden}
 \PersonalEntry{Phone}{+46 768947275}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
+\PersonalEntry{GitHub}{https://github.com/NagyAttila}
 
 %%% Education
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
 
 \EducationEntry{MSc. Computer Science}{09/2012 -- 04/2014}
-  {University of Gothenburg, Sweden}{Transcript of records is available on demand.\\
-  Thesis: Energy Efficient, High-speed Communication in Wireless Sensor Networks}
+  {Chalmers University of Technology, Sweden}{Specialization: Distributed Systems and Networks\\
+  Thesis' Title: Energy Efficient, High-speed Communication in Wireless Sensor Networks\\
+  Thesis' Keywords: Opportunistic Routing, Bulk-transfer, TinyOS, nesC\\
+  Student Project: Carolo Cup, Germany, self-driving miniature cars, team leader\\
+  Research Project: Smart-meter classification and disaggregation using SVM}
+
 \sepspace
 
 \EducationEntry{ERASMUS Scholarship}{09/2008 -- 01/2009}
-  {University of Applied Sciences Ravensburg-Weingarten, Germany}{\vspace*{-1em}}
+  {University of Applied Sciences Ravensburg-Weingarten, Germany\\
+  Field: Embedded Systems }{\vspace*{-1em}}
 \sepspace
 
   \EducationEntry{BSc. Electrical Engineering}{09/2004 -- 06/2009}{Obuda University, Hungary}{Specialization: Embedded Systems\\
-  Thesis: Robot Simulation in OpenGL Environment}
+  Thesis' Title: Robot Simulation in OpenGL Environment\\
+  Thesis' Keywords: Industrial robot simulation, OpenGL, C++. \\
+  Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega micro-controller}
 
 \NewPart{Work}{}
 \WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
 
 \SkillsEntry{Programming:}{Matlab, Simulink, Python, C++}
+
+\SkillsEntry{Roles:}{Self-Driving Car Developer, Unit Tester}
 
 \SkillsEntry{Applications:}{Data-Analysis, Sensor-Fusion, Mapping, Logging}
 
@@ -126,43 +136,24 @@
 
 \WorkEntry{Nokia Siemens Networks}{08/2009 -- 08/2012}{Software Engineer, Hungary, Full-time}
 
-\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH}
+\SkillsEntry{Roles:}{Scrum Master, Functional Developer, Unit Tester, Maintenance}
+
+\SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, TNSDL, LDAP}
 
 \SkillsEntry{Testing:}{CxxTest, testAnt, Jenkins}
 
 \SkillsEntry{Debugging:}{GDB, Valgrind, oProfile}
 
-\SkillsEntry{Principles:}{Scrum, Agile, TDD, KISS}
+\SkillsEntry{Principles:}{Scrum, Agile, TDD}
 
-\NewPart{Interest}{}
-\SkillsEntry{Technical:}{functional programming}
-\SkillsEntry{}{Haskell}
-\SkillsEntry{}{free/open-source community}
+%\NewPart{Interest}{}
+%\SkillsEntry{Technical:}{functional programming}
+%\SkillsEntry{}{Haskell}
+%\SkillsEntry{}{free/open-source software}
 
-\sepspace
-\SkillsEntry{Sports:}{rock climbing}
-\SkillsEntry{}{slacklining}
-\SkillsEntry{}{acroyoga}
-
-\NewPart{Work Projects}{}
-
-\EducationEntry{Volvo Cars}{07/2014 -- 07/2016}{Active-Safety}{I spend two years at Volvo Cars Corporation in Sweden as a Self-Driving Car engineer in the DriveMe project's Active-Safety team working on state-of-the-art technologies in the field of data logging, sensor fusion, and map creation. In the Active-Safety team I was mainly occupied by post-processing and fusing data from different GPS and LIDAR sensor providers.}
-
-\sepspace
-
-\EducationEntry{Nokia Siemens Networks}{08/2009 -- 05/2010}{HLR}{In this team I mainly was occupied by unit testing using a Nokia specific language, called TNSDL.}
-
-\EducationEntry{}{05/2010 -- 08/2012}{DXA}{My tasks in this project covered several stages of the development process including implementation, unit and functional testing, and maintenance using a wide range of programming languages, tools and protocols, such as: C++, Python, Perl, BASH, GDB, oProfile, Valgrind, CxxTest, testAnt, Jenkins and LDAP. On top of that, in my last year I became the scrum master of a team of 6 people}
-
-%%% Student Projects
-%%% ------------------------------------------------------------
-\NewPart{Student Projects}{}
-
-\EducationEntry{Master's Student}{06/2013 -- 04/2014}{Thesis}{The thesis involved a low-power, low-delay, opportunistic routing protocol for wireless sensor networks implemented on the TinyOS platform using a component-based, event-driven programming language devised for embedded systems, called nesC. My task was to extend this protocol for bulk-transfer scenarios and to test it on real testbeds.}
-\EducationEntry{}{10/2013 -- 03/2014}{Student Research}{Beside the course lectures and laboratory exercises, I was part of a research project cooperating with three lecturers from Chalmers University. The project involved smart meter disaggregation and automatic classification by several classifier algorithms, mostly support vector machine, using electricity consumption data from smart grid networks.}
-\EducationEntry{}{09/2013 -- 02/2014}{Carolo Cup}{Carolo Cup is an international student competition for self-driven miniature vehicles organized annually in Germany. During the preparation for the next competition held in February, 2014, I further experienced the merits of team work in the perspective of the team leader for the software team containing students from both Gothenburg and Chalmers Universities.}
-\sepspace
-\EducationEntry{Bachelor's Student}{01/2009 -- 05/2009}{Thesis}{Robot simulation in a 3D, OpenGL environment using C language with GLUT API.}
-\EducationEntry{}{01/2008 -- 05/2008}{Project Course}{Assembly of a remote controlled miniature car using an 8 bit Atmega micro-controller, DC motors, a Bluegiga WT12 bluetooth module and a purely mechanical miniature lego car.}
+%\sepspace
+%\SkillsEntry{Sports:}{rock climbing}
+%\SkillsEntry{}{slacklining}
+%\SkillsEntry{}{acroyoga}
 
 \end{document}
