minor aesthetic update on the single-sided version

--- a/CV_Attila_Nagy_simple.tex
+++ b/CV_Attila_Nagy_simple.tex
@@ -108,18 +108,17 @@
   Thesis' Keywords: Opportunistic Routing, Bulk-transfer, TinyOS, nesC\\
   Student Project: Carolo Cup, Germany, self-driving miniature cars, team leader\\
   Research Project: Smart-meter classification and disaggregation using SVM}
-
 \sepspace
 
 \EducationEntry{ERASMUS Scholarship}{09/2008 -- 01/2009}
-  {University of Applied Sciences Ravensburg-Weingarten, Germany\\
-  Field: Embedded Systems }{\vspace*{-1em}}
+{University of Applied Sciences Ravensburg-Weingarten, Germany}
+{Field: Embedded Systems }
 \sepspace
 
-  \EducationEntry{BSc. Electrical Engineering}{09/2004 -- 06/2009}{Obuda University, Hungary}{Specialization: Embedded Systems\\
-  Thesis' Title: Robot Simulation in OpenGL Environment\\
-  Thesis' Keywords: Industrial robot simulation, OpenGL, C++. \\
-  Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega micro-controller}
+\EducationEntry{BSc. Electrical Engineering}{09/2004 -- 06/2009}{Obuda University, Hungary}{Specialization: Embedded Systems\\
+Thesis' Title: Robot Simulation in OpenGL Environment\\
+Thesis' Keywords: Industrial robot simulation, OpenGL, C++. \\
+Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega micro-controller}
 
 \NewPart{Work}{}
 \WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
