adding Udacity to the Education section

--- a/CV_Attila_Nagy_simple.tex
+++ b/CV_Attila_Nagy_simple.tex
@@ -102,6 +102,16 @@
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
 
+\EducationEntry{Deep Learning Nanodegree}{01/2017 -- 06/2017}
+{Udacity, www.udacity.com} {Assigment 1: Vanilla Neural Network from scratch\\
+ Assigment 2: Image Classification by Convolutional Neural Network\\
+ Assigment 3: TV script generation by Recurrent Neural Network\\
+ Assigment 4: Language-translation by Recurrent Neural Network\\
+ Assigment 5: Generative Adversarial Networks (coming in May)\\
+ Source-code: https://github.com/NagyAttila/Udacity\_DLND\_Assigments }
+\sepspace
+
+
 \EducationEntry{MSc. Computer Science}{09/2012 -- 04/2014}
   {Chalmers University of Technology, Sweden}{Specialization: Distributed Systems and Networks\\
   Thesis' Title: Energy Efficient, High-speed Communication in Wireless Sensor Networks\\
@@ -120,6 +130,7 @@ Thesis' Title: Robot Simulation in OpenGL Environment\\
 Thesis' Keywords: Industrial robot simulation, OpenGL, C++. \\
 Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega micro-controller}
 
+\clearpage
 \NewPart{Work}{}
 \WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
 
@@ -145,14 +156,14 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \SkillsEntry{Principles:}{Scrum, Agile, TDD}
 
-%\NewPart{Interest}{}
-%\SkillsEntry{Technical:}{functional programming}
-%\SkillsEntry{}{Haskell}
-%\SkillsEntry{}{free/open-source software}
+\NewPart{Interest}{}
+\SkillsEntry{Technical:}{functional programming}
+\SkillsEntry{}{machine learning}
+\SkillsEntry{}{free/open-source software}
 
-%\sepspace
-%\SkillsEntry{Sports:}{rock climbing}
-%\SkillsEntry{}{slacklining}
-%\SkillsEntry{}{acroyoga}
+\sepspace
+\SkillsEntry{Sports:}{rock climbing}
+\SkillsEntry{}{slacklining}
+\SkillsEntry{}{acroyoga}
 
 \end{document}
